[project]
name = "ultravox-example"
version = "0.0.1"
description = "Example use of ultravox-client package."
authors = [{ name = "Fixie Team", email = "hello@fixie.ai" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
dependencies = ["ultravox-client[local]"]

[dependency-groups]
dev = [
    "pytest>=7.1.3,<8",
    "pytest-mock>=3.10.0,<4",
    "pytest-xdist>=3.3,<4",
    "pyright>=1.1.379,<2",
    "deptry>=0.12.0,<0.13",
    "types-mock>=5.1.0.2,<6",
    "pytest-asyncio>=0.23.7,<0.24",
    "ruff>=0.4.1,<0.5",
]

[tool.uv.sources]
ultravox-client = { path = "../ultravox-client", editable = true }

[tool.deptry]
extend_exclude = [".*test\\.py", ".*tool\\.py"]
