[project]
name = "ultravox-client"
version = "0.1.0"
description = "Python client SDK for Ultravox."
authors = [{ name = "Fixie Team", email = "hello@fixie.ai" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ultravox",
    "audio",
    "realtime",
    "artificial intelligence",
]
dependencies = [
    "livekit>=0.18.1,<0.19",
    "websockets>=14.1,<15",
    "pyee>=11.0.1,<12",
    "numpy>=2.1.3,<3",
    "dataclasses-json>=0.6.7,<0.7",
    "exceptiongroup>=1.3.1 ; python_full_version < '3.11'",
]

[project.urls]
Homepage = "https://ultravox.ai"
Repository = "https://github.com/fixie-ai/ultravox-client-sdk-python"
Documentation = "https://fixie-ai.github.io/ultradox/"

[project.optional-dependencies]
local = [
    "sounddevice>=0.5.1,<0.6",
]

[dependency-groups]
dev = [
    "pytest>=7.1.3,<8",
    "pytest-mock>=3.10.0,<4",
    "pytest-xdist>=3.3,<4",
    "pyright>=1.1.379,<2",
    "deptry>=0.12.0,<0.13",
    "types-mock>=5.1.0.2,<6",
    "pytest-asyncio>=0.23.7,<0.24",
    "ruff>=0.4.1,<0.5",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ultravox_client"
module-root = ""


[tool.deptry]
extend_exclude = [".*test\\.py", ".*tool\\.py"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--doctest-modules"
filterwarnings = [
    "error",
]
